--- a/index.html
+++ b/index.html
@@ -1,9 +1,90 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>HTML/CSS CheatSheet</title>
+</head>
 <body>
-  <h1>Tanner</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <h1>HTML/CSS CheatSheet</h1>
+    </header>
+    <section>
+        <div>
+            <h2>Table elements</h2>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Tag</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>&lt;table&gt;</td>
+                    <td>Table</td>
+                    <td>The wrapper for HTML tables</td>
+                </tr>
+                <tr>
+                    <td>&lt;tr&gt;</td>
+                    <td>Table Row</td>
+                    <td>Add row to table</td>
+                </tr>
+                <tr>
+                    <td>&lt;td&gt;</td>
+                    <td>Table Data</td>
+                    <td>Add cells of data to table</td>
+                </tr>
+                <tr>
+                    <td>&lt;thead&gt;</td>
+                    <td>Table Head</td>
+                    <td>Heading of table columns</td>
+                </tr>
+                <tr>
+                    <td>&lt;tbody&gt;</td>
+                    <td>Table Body</td>
+                    <td>Semantic - Contains table data other than heading and footer</td>
+                </tr>
+                <tr>
+                    <td>&lt;th&gt;</td>
+                    <td>Table Heading</td>
+                    <td>Add titles for rows - must be enclosed in table row element</td>
+                </tr>
+                <tr>
+                    <td>&lt;tfoot&gt;</td>
+                    <td>Table Footer</td>
+                    <td>Add footer to table - uses table rows</td>
+                </tr>
+            </tbody>
+        </table>
+        <div>
+            <h2>Table Attributes</h2>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Attribute</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>colspan</td>
+                    <td>Column Span</td>
+                    <td>Indicates how many columns a cell should span</td>
+                </tr>
+                <tr>
+                    <td>rowspan</td>
+                    <td>Row Span</td>
+                    <td>Indicates how many rows a cell should span</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
 </body>
- 
 </html>
